--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "doctrine/annotations": "^1.6",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
@@ -12,6 +13,7 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.9",
         "symfony/dotenv": "^4.0"
     },
     "conflict": {
