--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 /.php_cs
 /.php_cs.cache
 ###< friendsofphp/php-cs-fixer ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+/reports
+###< symfony/phpunit-bridge ###
