--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.9",
+        "phpstan/phpstan": "^0.9.1",
+        "phpstan/phpstan-phpunit": "^0.9.1",
         "symfony/dotenv": "^4.0",
         "symfony/phpunit-bridge": "^4.0"
     },
