--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.9",
+        "jakub-onderka/php-console-highlighter": "^0.3.2",
+        "jakub-onderka/php-parallel-lint": "^0.9.2",
         "phpstan/phpstan": "^0.9.1",
         "phpstan/phpstan-phpunit": "^0.9.1",
         "symfony/dotenv": "^4.0",
