--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "require": {
         "php": "^7.1.3",
         "doctrine/annotations": "^1.6",
+        "ramsey/uuid": "^3.7",
         "symfony/console": "^4.0",
         "symfony/dotenv": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/monolog-bundle": "^3.1",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
