--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "jakub-onderka/php-parallel-lint": "^0.9.2",
         "phpstan/phpstan": "^0.9.1",
         "phpstan/phpstan-phpunit": "^0.9.1",
+        "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^4.0"
     },
     "conflict": {
