--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,14 @@ APP_SECRET=65c78f7328232ee788ac462968c86aeb
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
+
+###> mariadb
+#DATABASE_NAME=
+#DATABASE_USER=
+#DATABASE_PASS=
+#DATABASE_URL=mysql://${DATABASE_NAME}:${DATABASE_PASS}@mariadb:3306/${DATABASE_NAME}?charset=utf8mb4&serverVersion=10.1.20-MariaDB-1~jessie
+###< mariadb
+
+###> rabbitmq
+#RABBITMQ_VHOST=
+###< rabbitmq
