--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "friendsofphp/php-cs-fixer": "^2.9",
         "jakub-onderka/php-console-highlighter": "^0.3.2",
         "jakub-onderka/php-parallel-lint": "^0.9.2",
+        "phpmetrics/phpmetrics": "^2.3",
         "phpstan/phpstan": "^0.9.1",
         "phpstan/phpstan-phpunit": "^0.9.1",
         "symfony/maker-bundle": "^1.0",
